# Flow-simulator

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  KPIS.md  LOGIC_BUGS.md  README.md  TODO.txt  atelier_injection.json  ateliers_injection_moulage.json  clean_export.json  documentation_simulation_fr.md  flow_designer.py  flow_editor_adapted.py  flow_editor_updated.py  graph_parser.py  guide_flow_designer_fr.md  main.py  requirements.txt  simulation documentee.py  simulation.py  simulation_ultra_pro_max.py  test.py  test.txt  visual_simulation.py
.github/workflows/: build-engines.yml
Test runs/: Tests excel.xlsx  run10.json  run4.json  run5.json  run6.json  run7.json  run8.json  run9.json
cpp/: CMakeLists.txt
cpp/engine/: README.md  kpis.hpp  main.cpp  parser.hpp
cpp/salabim++/: salabim.hpp
cpp/simulation++/: simulation.hpp
docs/: flow-designer.en.md  flow-designer.fr.md  kpis.en.md  kpis.fr.md  simulation.en.md  simulation.fr.md
documentation/: flow-designer.en.md  flow-designer.fr.md  kpis.en.md  kpis.fr.md  simulation.en.md  simulation.fr.md
engine/: README.md  kpis.hpp  main.cpp  parser.hpp
engines/: README.md  build_local.bat  build_local.sh  flow_sim-linux-x86_64  flow_sim-macos-universal
flow_designer/: __main__.py  atelier_injection.json  atelier_montage.json  dialogs.py  flow_designer.py  nodes.py  results_mode.py  sample_flow.json  sample_flow_rate.json  sim_runner.py  ui_helpers.py  widgets.py
flow_designer/examples/: README.md  sample_flow.json
json_parser/: json_parser.py
optimized_version/: flow_designer_advanced.py  graph_parser_advanced.py  simulation_optimized.py
parser/: parser.py  report.py
runs/2026-07-17_081734_atelier_injection/: buffers.csv  flux.csv  (+6 more)
salabim++/: BENCHMARK.md  CMakeLists.txt  README.md  TUTORIAL.md  salabim.hpp  simulation.hpp
simulation/: TODO.txt  __init__.py  ables.py  compat.py  component.py  distribution.py  function_generator.py  graphs.py  helpers.py  interrupters.py  interval.py  judgement_day.py  kpis.py  operator.py  outlet.py  piece.py  piece_generator.py  piece_task.py  protocols.py  render_from_data.py  resource.py  resource_task.py  sampler.py  scratchpad.py  shift_manager.py  task.py  triggerable.py
simulation++/: PENDING.md  README.md  simulation.hpp
tests/: conftest.py  test_clusters.py  test_disabled_nodes.py  test_enum_sync.py  test_priority_operators.py
(+904 files in other folders)
